# tutorial_py_brasil

./: LICENSE  README.md  pyproject.toml
api/: api_magalu.py  api_pedidos.py  esquema.py
tests/: test_api.py
