[tool.poetry]
name = "tutorial_py_brasil"
version = "0.1.0"
description = ""
authors = ["matheuslfarias <matheusmlf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
httpx = "^0.23.0"
httpie = "^3.2.1"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
